--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <meta property="og:description" content="Innovative IT solutions, digital marketing services, and practical learning opportunities for students.">
 <!-- <meta property="og:image" content="banner.png">
 <meta property="og:url" content="#"> -->
-<link rel="stylesheet" href="style.css" type="text/css">
+<link rel="stylesheet" href="Style.css" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
  <!--favicon ------------------------------------------------------------------------------>
