--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <title>Error 404 Not Found</title>
 
 
- <link rel="stylesheet" href="style.css" type="text/css">
+ <link rel="stylesheet" href="Style.css" type="text/css">
  <!-- cdn -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
