--- a/Handouts/Assignment.html
+++ b/Handouts/Assignment.html
@@ -6,8 +6,8 @@
 <meta name="description" content="CampusXchange offers expert support for programming assignments, AI/ML models, academic projects, and technical reports. Fast, reliable, and plagiarism-free.">
 <meta name="keywords" content="assignment help, programming assignment, AI project help, ML model support, web development project, technical assignment service, CampusXchange services">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../style.css" type="text/css">
-<link rel="stylesheet" href="../styles/assignment.css" type="text/css">
+<link rel="stylesheet" href="../Style.css" type="text/css">
+<link rel="stylesheet" href="../Styles/Assignment.css" type="text/css">
 <!-- cdns-->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!--favicon ------------------------------------------------------------------------------>
