--- a/Services/Webdevelopment.html
+++ b/Services/Webdevelopment.html
@@ -5,14 +5,14 @@
 <meta name="description" content="Get fast, secure, and SEO-optimized websites tailored to your business needs. CampusXchange offers custom web development services, responsive design, and full-stack solutions to help your brand grow online.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="Custom web development services , Web application development services , Website design and development services , Responsive Website Design ,SEO-Friendly Website ">
-<link rel="stylesheet" href="../style.css" type="text/css">
-<link rel="stylesheet" href="../styles/webdev.css" type="text/css">
+<link rel="stylesheet" href="../Style.css" type="text/css">
+<link rel="stylesheet" href="../Styles/Webdev.css" type="text/css">
   <!-- cdns-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!--favicon ------------------------------------------------------------------------------>
 <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
+<link rel="icon" type="image/pnS" sizes="16x16" href="../favicon_io/favicon-16x16.png">
 <link rel="manifest" href="../favicon_io/site.webmanifest">
 </head>
 <body>
